2010-10-28: Tomáš Chvátal <scarabeus@gentoo.org>
	* eshowkw: Deprecate eshowkw.
		This package (more of its full rewrite) will be from now on at
		gentoolkit package.

2010-10-25: Christian Ruppert <idl0r@gentoo.org>
	* ebump: Whitespace fixes.
		Fix options. Add descriptions for -a|--no-auxfiles and -c|--no-changelog.
		Cleanup. Make it a bit more POSIX conform. Update manpage. Add support
		for multiple ebuilds to bump. Bump version. Fix header.

	* ego: Move "ego" into DEPRECATED.

2010-10-23: Christian Ruppert <idl0r@gentoo.org>
	* echangelog: Fix version bump detection for hg/mercurial, bug 335636,
		thanks to Mike Gilbert <floppymaster@gmail.com>.
		Sort files properly, bug 336390, thanks to Michał Górny
		<mgorny@gentoo.org>.

2010-10-19: Christian Ruppert <idl0r@gentoo.org>
	* eshowkw: Apply a patch from Mart Raudsepp <leio@gentoo.org> to speedup
		version_sort(). Remove unused functions.

2010-10-10: Christian Ruppert <idl0r@gentoo.org>
	* ebump: Make ebump POSIX conform

2010-07-03: Christian Ruppert <idl0r@gentoo.org>
	* ekeyword: Don't touch an empty KEYWORDS variable in case it occurs more
	than once, like in live ebuilds. Bug 321475.
	* ekeyword: Fix stabilization with "all", bug 304133#c11.

2010-07-02: Christian Ruppert <idl0r@gentoo.org>
	* imlate: Don't ignore package names without category.
	* ekeyword: Show "diff -U 0" to cover all changes.
		Add file_parse, get_portdir and get_architectures functions.
		file_parse is a file parser which strips trailing and starting
		whitespace, replaces multiple whitespace by one whitespace and ignores
		comments. It returns an array.
		get_portdir uses portageq to determine the PORTDIR value.
		get_architectures reads $PORTDIR/profiles/arch.list and adds all
		available architectures to the %ARCH hash which can be used for
		validation.
		Validate user input/arch, bug 326029.
		Add get_architectures_status function to get the architecture status,
		0 = unkown, 1 = dev, 2 = exp, 3 = stable.